<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">INF303</string>
    <string name="join_e_mail" translatable="false">Join e-mail</string>
    <string name="password" translatable="false">Password</string>
    <string name="signup" translatable="false">SIGNUP</string>
    <string name="login" translatable="false">LOGIN</string>
    <string name="listing" translatable="false">LISTING</string>
    <string name="kullanicilist" translatable="false">kullanicilist</string>
    <string name="listele" translatable="false">listele</string>
    <string name="liste" translatable="false">liste</string>
    <string name="kaydett" translatable="false">KAYDET</string>
    <string name="listelee" translatable="false">LISTELE</string>
    <string name="name" translatable="false">name</string>
    <string name="g_ster" translatable="false">GÖSTER</string>
    <string name="Join_Name" translatable="false">Name</string>
    <string name="namen" translatable="false">Name</string>
    <string name="join_surname" translatable="false">Join_surname</string>
    <string name="surname" translatable="false">Name</string>
    <string name="isim_gir" translatable="false">isim_gir</string>
    <string name="soyad_gir" translatable="false">soyad_gir</string>
    <string name="button" translatable="false">Button</string>
    <string name="back" translatable="false">BACK</string>
    <string name="delete" translatable="false">DELETE</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="choose_button_f_r_gender" translatable="false">Choose Button für Gender</string>
    <string name="radiobuttonmale" translatable="false">RadioButtonMale</string>
    <string name="male" translatable="false">male</string>
    <string name="chose_gender" translatable="false">Chose Gender</string>
    <string name="malee" translatable="false">Malee</string>
    <string name="isim" translatable="false">isim</string>
    <string name="join" translatable="false">join</string>
    <string name="join_name_surname" translatable="false">Join Name-Surname</string>
    <string name="kiloo" translatable="false">kilo</string>
    <string name="ayarlar" translatable="false">AYARLAR</string>
    <string name="title_activity_main2" translatable="false">MainActivity</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_profil" translatable="false">Profil</string>
    <string name="name_surname" translatable="false">Name-Surname</string>
    <string name="title_activity_ayar" translatable="false">Ayar</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="se" translatable="false">Seç</string>
    <string name="todoo" translatable="false">TODO</string>
    <string name="Toast_giris">Alanlar boş</string>
    <string name="Toast_giris_2">Kayıt başarılı</string>
    <string name="Toast_giris_3">Bu kullanıcı adı ya da e-posta zaten kayıtlı</string>
    <string name="Toast_giris_4">Parola eşleşmiyor</string>
    <string name="Toast_giris_5">Yanlış kullanıcı adı, e-posta veya şifre</string>
    <string name="kayit">KAYIT</string>
    <string name="sifre_tekrar">Şifre tekrar</string>
    <string name="sifre">Şifre</string>
    <string name="giri_i_in_nce_kay_t">Giriş için önce kayıt!</string>
    <string name="g_r">GİRİŞ</string>
    <string name="kullanici_adi">Mail/Kullanıcı adı</string>
    <string name="anasayfa">ANASAYFA</string>
    <string name="rn_1000">örn:1000</string>
    <string name="kalori">KALORİ</string>
    <string name="bug_n">BUGÜN</string>
    <string name="hedef_kilo">Hedef Kilo</string>
    <string name="rn_3">örn:3</string>
    <string name="_5l">5L/</string>
    <string name="su">SU</string>
    <string name="uyku">UYKU</string>
    <string name="_24">24/</string>
    <string name="rn_7">örn:7</string>
    <string name="_10000">10000/</string>
    <string name="rn_180">örn:180</string>
    <string name="rn_65">örn:65</string>
    <string name="Toast_profil_1">Dil seçin...</string>
    <string name="sim_soyisim">İsim-Soyisim</string>
    <string name="boy">Boy</string>
    <string name="kilo">Kilo</string>
    <string name="bayan">Bayan</string>
    <string name="bay">Bay</string>
    <string name="dil">Dil</string>
    <string name="checkbox">CheckBox</string>
    <string name="kaydet">KAYDET</string>
    <string name="Toast_uyku_1">Uyku süresi eklendi</string>
    <string name="Toast_su_1">Daha fazla su tüketmelisiniz</string>
    <string name="Toast_su_2">Cok fazla su tükettiniz</string>
    <string name="Toast_su_3">Su tüketimi gayet iyi durumda</string>
    <string name="Toast_su_kayit">Kaydedildi</string>
    <string name="Toast_yemek_1">Kalori eklendi</string>
    <string name="yemek_ara">YEMEK ARA</string>
    <string name="yemek_giriniz">Yemek giriniz</string>
    <string name="yemekler">Yemekler</string>
    <string name="yemek_ekle">EKLE</string>
    <string-array name="title">
        <item>Brownie</item>
        <item>Kereviz Suyu</item>
        <item>Keçiboynuzlu Kek</item>
        <item>Karnabaharlı Kısır</item>
        <item>Pizza</item>
        <item>Yoğurtlu Brokoli</item>
        <item>Ezogelin Çorbası</item>
        <item>Zeytinyağlı İmam Bayıldı</item>
        <item>Ali Nazik</item>
        <item>Mercimek Çorbası</item>
        <item>Yağ Yakan Beyaz Lahana Çorbası</item>
        <item>Portakallı Kereviz</item>
        <item>Semizotu Salatası</item>
        <item>Ispanaklı Beşamel Soslu Makarna</item>
        <item>Kabakta Cevizli Tavuk</item>
        <item>Brokoli Köfte</item>
        <item>Elmalı Turta</item>
        <item>Zeytinyağlı Barbunya</item>
        <item>Havuçlu Cevizli Tarçınlı Kek</item>
        <item>Cheesecake</item>
        <item>Yoğurtlu Süzme Mercimek Çorbası</item>
    </string-array>
</resources>