<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Profil">

    <EditText
        android:id="@+id/namesurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="140dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/sim_soyisim"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/kilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/kilo"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boy" />

    <EditText
        android:id="@+id/boy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/boy"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namesurname" />

    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="312dp"
        android:layout_height="147dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginBottom="324dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kilo"
        app:layout_constraintVertical_bias="0.085"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginLeft="130dp"
            android:text="@string/bayan" />

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="30dp"
            android:checked="true"
            android:text="@string/bay" />

        <CheckBox
            android:id="@+id/btnDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox" />

    </RadioGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="164dp"
        android:layout_height="104dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/group_15" />

    <ImageButton
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/geri" />

    <ImageButton
        android:id="@+id/kayit2"
        android:layout_width="220dp"
        android:layout_height="42dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:contentDescription="@string/todoo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioSex"
        app:srcCompat="@drawable/btn_giris" />

    <TextView
        android:id="@+id/kayit_yazi"
        android:layout_width="181dp"
        android:layout_height="20dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/kaydet"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/kayit2"
        app:layout_constraintEnd_toEndOf="@+id/kayit2"
        app:layout_constraintStart_toStartOf="@+id/kayit2" />

    <Button
        android:id="@+id/sprache"
        android:layout_width="235dp"
        android:layout_height="58dp"
        android:background="@drawable/btn_giris"
        android:text="@string/dil"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/kayit2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioSex"
        tools:ignore="MissingConstraints"></Button>

    <ImageView
        android:id="@+id/btn_anasayfa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kayit2"
        app:layout_constraintVertical_bias="0.604"
        app:srcCompat="@drawable/anasayfaa" />


</androidx.constraintlayout.widget.ConstraintLayout>