<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".yemeksecarayuz">

    <ImageView
        android:id="@+id/yemek_ekle_arayuz_ust_logo"
        android:layout_width="600dp"
        android:layout_height="600dp"
        android:layout_marginBottom="392dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/yemek_sec_resim" />

    <ImageView
        android:id="@+id/yemek_ekle_arayuz_btn_ekle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yemek_ekle_arayuz_ust_logo"
        app:layout_constraintVertical_bias="0.6"
        app:srcCompat="@drawable/yemek_sec_btn_ekle_yeni" />

    <ImageView
        android:id="@+id/yemek_ekle_arayuz_btn_home"
        android:layout_width="64dp"
        android:layout_height="63.4dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yemek_ekle_arayuz_btn_ekle"
        app:srcCompat="@drawable/anasayfaa" />

    <ImageView
        android:id="@+id/yemek_ekle_arayuz_btn_geri_sayfa"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="360dp"
        android:layout_marginBottom="670dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/btn_yemek_sec_geri_sayfa"
        tools:ignore="RtlCompat" />

    <AutoCompleteTextView
        android:id="@+id/yemek_ekle_arama_cubugu"
        android:layout_width="212dp"
        android:layout_height="49dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="30dp"
        android:completionThreshold="1"
        android:dropDownAnchor="@+id/text_view_yemekler"
        android:hint="@string/yemek_giriniz"
        android:popupBackground="@color/design_default_color_background"
        app:layout_constraintBottom_toTopOf="@+id/yemek_ekle_arayuz_btn_ekle"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yemek_ekle_arayuz_ust_logo"
        app:srcCompat="@drawable/ic_baseline_search_24"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/text_view_yemekler"
        android:layout_width="213dp"
        android:layout_height="55dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="64dp"
        android:text="@string/yemekler"
        app:layout_constraintBottom_toBottomOf="@+id/yemek_ekle_arayuz_btn_ekle"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="187dp"
        android:layout_height="28dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:text="@string/yemek_ekle"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/yemek_ekle_arayuz_btn_ekle"
        app:layout_constraintEnd_toEndOf="@+id/yemek_ekle_arayuz_btn_ekle"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/yemek_ekle_arayuz_btn_ekle" />
</androidx.constraintlayout.widget.ConstraintLayout>